# twod

./: .gitignore  Makefile  README.md  example.cpp  test.h
examples/: common.cmake
examples/basic/: CMakeLists.txt  Makefile  basic.cpp  test.cpp  test.h
examples/basic/resources/sprite/: cat_running.sprite  dragon.sprite
examples/factory/: CMakeLists.txt  Makefile  character.cpp  factory_example.cpp  obj_factory.cpp  obj_factory.h  wall.cpp  wall.h
examples/movement/: .movement.cpp.swp  CMakeLists.txt  Makefile  ctrl_square.cpp  ctrl_square.h  info.cpp  info.h  movement.cpp  moving_square.cpp  moving_square.h  square.cpp  square.h  wall.cpp  wall.h
examples/parallax/: CMakeLists.txt  Makefile  ctrl_square.cpp  ctrl_square.h  parallax.cpp  spaceship.cpp  spaceship.h
examples/platform/: CMakeLists.txt  Makefile  character.h  info.h  platform.cpp
examples/platform/resources/sprite/: char_right.sprite
examples/tileset/: CMakeLists.txt  Makefile  tileset  tileset.cpp
resources/sprite/: cat.sprite
twoD/: CMakeLists.txt  engine.cpp  engine.h  factory.h
twoD/base/: background.cpp  background.h  color.cpp  color.h  image.cpp  image.h  movement.cpp  movement.h  position.cpp  position.h  primitive.cpp  primitive.h  size.cpp  size.h  sound.cpp  sound.h  sprite.cpp  sprite.h  text.cpp  text.h  tileset.cpp  tileset.h
twoD/cmake-modules/: FindAllegro.cmake
twoD/objects/: block.cpp  block.h  border.cpp  border.h  image_map.cpp  image_map.h  map.cpp  map.h  object.h  platform.cpp  platform.h  test.cpp  test.h  tile_map.cpp  tile_map.h
(+1 files in other folders)
